[gd_scene load_steps=16 format=3 uid="uid://d7jxnej2vcu5"]

[ext_resource type="Script" path="res://scripts/ChatController.gd" id="1_8wvgl"]
[ext_resource type="Script" path="res://scripts/GameController.gd" id="1_fkfaa"]
[ext_resource type="PackedScene" uid="uid://q7mlu3p62o65" path="res://components/message_container.tscn" id="2_50mcd"]
[ext_resource type="Resource" uid="uid://orub857ckp64" path="res://characters/Graldor.tres" id="2_n83vv"]
[ext_resource type="AudioStream" uid="uid://bh5hgfg5asffm" path="res://sfx/typing_01_1.5x.ogg" id="3_6keju"]
[ext_resource type="Texture2D" uid="uid://dvyk2hj2rjo1w" path="res://backgrounds/road_up.png" id="3_hjjay"]
[ext_resource type="Resource" uid="uid://d34m1hlwqteux" path="res://characters/Player.tres" id="4_tyhv1"]
[ext_resource type="Resource" uid="uid://coxqver5b5p4d" path="res://characters/Lirian.tres" id="6_555lu"]
[ext_resource type="PackedScene" uid="uid://b6urc3lubjr4k" path="res://components/system_message_container.tscn" id="7_7rqwm"]
[ext_resource type="FontFile" uid="uid://gc62kgbwdw2" path="res://fonts/RulerGold.ttf" id="8_vtrk3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mial8"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 0.752941)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rea1l"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 60.0
content_margin_bottom = 15.0
bg_color = Color(0.051971, 0.051971, 0.051971, 0.752941)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r25pw"]
content_margin_left = 10.0
content_margin_right = 30.0
bg_color = Color(0.243137, 0.243137, 0.243137, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vv7l"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0.752941)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jequm"]
content_margin_left = 20.0
content_margin_top = 15.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0.752941)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Node"]

[node name="GameController" type="Node" parent="."]
script = ExtResource("1_fkfaa")
max_retries = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6keju")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundRect" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hjjay")
expand_mode = 3
stretch_mode = 6

[node name="ResponseLengthContainer" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 1227.0
offset_top = 210.0
offset_right = 1327.0
offset_bottom = 250.0
tooltip_text = "Contagem de caracteres exibidos / recebidos na √∫ltima mensagem"
theme_override_styles/panel = SubResource("StyleBoxFlat_mial8")

[node name="ResponseLength" type="Label" parent="UI/ResponseLengthContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("8_vtrk3")
theme_override_font_sizes/font_size = 18
text = "-/-"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="TokenCountContainer" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 1086.0
offset_top = 210.0
offset_right = 1216.0
offset_bottom = 250.0
tooltip_text = "Estimativa (grosseira) de tokens enviados + recebidos"
theme_override_styles/panel = SubResource("StyleBoxFlat_mial8")

[node name="TokenCount" type="Label" parent="UI/TokenCountContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_vtrk3")
theme_override_font_sizes/font_size = 18
text = "Tokens: 0"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="ChatPanel" type="Panel" parent="UI" node_paths=PackedStringArray("chat_container", "input", "scroll_container", "audio_player", "response_length_display", "token_count_display", "background_image", "char_info_box")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -643.0
offset_top = -508.0
offset_right = 644.0
offset_bottom = -39.9996
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mial8")
script = ExtResource("1_8wvgl")
player = ExtResource("4_tyhv1")
characters = Array[Resource("res://characters/Character.gd")]([ExtResource("2_n83vv"), ExtResource("6_555lu")])
chars_per_second = 40
default_placeholder_text = "Digite sua mensagem"
awaiting_response_placeholder_text = "Aguardando resposta..."
intro_message = "Ap√≥s dias de viagem por trilhas sinuosas, voc√™ avan√ßa pela estrada que serpenteia atrav√©s de uma densa floresta. O caminho, uma vereda estreita e esburacada, foi marcado por desafios constantes: bandos de criaturas selvagens que espreitavam na penumbra das √°rvores e tempestades repentinas que tornavam o percurso quase intransit√°vel. Em um momento especialmente dif√≠cil, um grupo de bandidos apareceu repentinamente. Desarmado e sem chance de enfrentar os assaltantes, voc√™ usou sua ast√∫cia para escapar, escondendo-se entre as sombras e escapando do perigo.

Exausto, voc√™ retoma sua jornada com determina√ß√£o. A noite come√ßa a cair e a neblina densa torna o caminho incerto. Felizmente, ao cruzar uma curva da estrada, voc√™ avista uma pequena vila √† dist√¢ncia, com as luzes de lanternas piscando atrav√©s da bruma. Aproximando-se, voc√™ v√™ uma placa de madeira antiga com o nome ‚ÄúSerraluz‚Äù gravado em letras gastas pelo tempo. A pequena comunidade, aninhada entre colinas cobertas de n√©voa, exala uma aura de tranquilidade contrastante com as adversidades da jornada. Ao chegar √† entrada da vila, voc√™ avista uma aconchegante taverna que promete oferecer al√≠vio e descanso ap√≥s uma √°rdua jornada."
link_template = "[center][font_size=24][color=gold][pulse freq=1.0 color=#ffffff80 ease=-1.0]{{action}}[/pulse][/color][/font_size][/center]"
prev_interactions_instructions = "D√™ continuidade √† conversa, remetendo √†s intera√ß√µes anteriores com o jogador, conforme apresentado abaixo:

"
message_template = ExtResource("2_50mcd")
system_message_template = ExtResource("7_7rqwm")
chat_container = NodePath("ScrollContainer/ChatContainer")
input = NodePath("PanelContainer/Input")
scroll_container = NodePath("ScrollContainer")
audio_player = NodePath("../../AudioStreamPlayer")
response_length_display = NodePath("../ResponseLengthContainer/ResponseLength")
token_count_display = NodePath("../TokenCountContainer/TokenCount")
background_image = NodePath("../BackgroundRect")
char_info_box = NodePath("../CharInfoBox")

[node name="PanelContainer" type="PanelContainer" parent="UI/ChatPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rea1l")

[node name="Input" type="LineEdit" parent="UI/ChatPanel/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_vtrk3")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_r25pw")

[node name="SendButton" type="Button" parent="UI/ChatPanel/PanelContainer/Input"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -31.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
text = "‚û§"
flat = true

[node name="ClearButton" type="Button" parent="UI/ChatPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -46.0
offset_right = -13.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
text = "üóëÔ∏è"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/ChatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChatContainer" type="VBoxContainer" parent="UI/ChatPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharInfoBox" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -644.0
offset_top = 40.0
offset_right = 644.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="PortraitContainer" type="PanelContainer" parent="UI/CharInfoBox"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_1vv7l")

[node name="Portrait" type="TextureRect" parent="UI/CharInfoBox/PortraitContainer"]
layout_mode = 2
expand_mode = 1

[node name="CharDescriptionContainer" type="PanelContainer" parent="UI/CharInfoBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jequm")

[node name="CharDescription" type="RichTextLabel" parent="UI/CharInfoBox/CharDescriptionContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/normal_font = ExtResource("8_vtrk3")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
scroll_active = false

[connection signal="request_sent" from="GameController" to="UI/ChatPanel" method="_on_request_sent"]
[connection signal="text_stream_data_received" from="GameController" to="UI/ChatPanel" method="_on_text_stream_data_received"]
[connection signal="text_stream_finished" from="GameController" to="UI/ChatPanel" method="_on_text_stream_finished"]
[connection signal="text_stream_started" from="GameController" to="UI/ChatPanel" method="_on_text_stream_started"]
[connection signal="player_message_submitted" from="UI/ChatPanel" to="GameController" method="_on_player_message_submitted"]
[connection signal="typing_char_added" from="UI/ChatPanel" to="UI/ChatPanel" method="_on_typing_char_added"]
[connection signal="typing_finished" from="UI/ChatPanel" to="UI/ChatPanel" method="_on_typing_finished"]
[connection signal="typing_started" from="UI/ChatPanel" to="UI/ChatPanel" method="_on_typing_started"]
[connection signal="pressed" from="UI/ChatPanel/PanelContainer/Input/SendButton" to="UI/ChatPanel" method="_on_send_pressed"]
[connection signal="pressed" from="UI/ChatPanel/ClearButton" to="UI/ChatPanel" method="_on_clear_pressed"]
